<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".screens.ExportImportActivity">

    <Button
        android:id="@+id/export_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export" />

    <Button
        android:id="@+id/import_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_" />
    <TextView
        android:id="@+id/list_hash_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/list_hash"
        android:textSize="20sp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hash_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/hash_item_pattern"
        android:gravity="center"/>


</LinearLayout>